--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.publication.body
+    - field.field.node.publication.field_abstract
     - field.field.node.publication.field_credit
     - field.field.node.publication.field_first_issue_approx_date
     - field.field.node.publication.field_first_issue_date
@@ -68,12 +69,19 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 10
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_abstract:
+    weight: 9
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
   field_credit:
-    weight: 12
+    weight: 8
     label: above
     settings:
       link: true
@@ -99,7 +107,7 @@ content:
     type: daterange_default
     region: content
   field_frequency:
-    weight: 9
+    weight: 5
     label: above
     settings:
       link: true
@@ -123,7 +131,7 @@ content:
     type: entity_reference_label
     region: content
   field_issn:
-    weight: 11
+    weight: 7
     label: above
     settings:
       link_to_entity: false
@@ -173,7 +181,7 @@ content:
     type: entity_reference_label
     region: content
   links:
-    weight: 13
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
