--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.publication.body
     - field.field.node.publication.field_abstract
     - field.field.node.publication.field_credit
+    - field.field.node.publication.field_date_description
     - field.field.node.publication.field_first_issue_approx_date
     - field.field.node.publication.field_first_issue_date
     - field.field.node.publication.field_first_issue_date_is_approx
@@ -18,6 +19,7 @@ dependencies:
     - field.field.node.publication.field_last_issue_date
     - field.field.node.publication.field_last_issue_date_is_approx
     - field.field.node.publication.field_last_issue_sort_date
+    - field.field.node.publication.field_oclc
     - field.field.node.publication.field_previous_title
     - field.field.node.publication.field_publication_place_city
     - field.field.node.publication.field_publication_place_province
@@ -39,6 +41,7 @@ third_party_settings:
         - field_last_issue_date_is_approx
         - field_last_issue_date
         - field_last_issue_approx_date
+        - field_date_description
       parent_name: ''
       weight: 5
       format_type: details
@@ -111,12 +114,12 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
   field_abstract:
-    weight: 10
+    weight: 11
     settings:
       rows: 5
       placeholder: ''
@@ -124,13 +127,21 @@ content:
     type: text_textarea
     region: content
   field_credit:
-    weight: 9
+    weight: 10
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
+  field_date_description:
+    weight: 42
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_first_issue_approx_date:
     weight: 38
@@ -267,6 +278,14 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_oclc:
+    weight: 9
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_previous_title:
     weight: 8
     settings:
@@ -333,7 +352,7 @@ content:
     region: content
   path:
     type: path
-    weight: 15
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -341,21 +360,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 13
+    weight: 14
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 17
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 14
+    weight: 15
     region: content
     third_party_settings: {  }
   title:
@@ -368,7 +387,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 11
+    weight: 12
     settings:
       match_operator: CONTAINS
       size: 60
