--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.publication.body
     - field.field.node.publication.field_abstract
     - field.field.node.publication.field_credit
+    - field.field.node.publication.field_date_description
     - field.field.node.publication.field_first_issue_approx_date
     - field.field.node.publication.field_first_issue_date
     - field.field.node.publication.field_first_issue_date_is_approx
@@ -18,6 +19,7 @@ dependencies:
     - field.field.node.publication.field_last_issue_date
     - field.field.node.publication.field_last_issue_date_is_approx
     - field.field.node.publication.field_last_issue_sort_date
+    - field.field.node.publication.field_oclc
     - field.field.node.publication.field_previous_title
     - field.field.node.publication.field_publication_place_city
     - field.field.node.publication.field_publication_place_province
@@ -51,6 +53,7 @@ third_party_settings:
         - field_first_issue_approx_date
         - field_last_issue_date
         - field_last_issue_approx_date
+        - field_date_description
       parent_name: ''
       weight: 4
       format_type: details
@@ -74,19 +77,27 @@ content:
     third_party_settings: {  }
     region: content
   field_abstract:
-    weight: 9
+    weight: 10
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_credit:
-    weight: 8
+    weight: 9
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_date_description:
+    weight: 10
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_first_issue_approx_date:
     weight: 7
@@ -156,6 +167,14 @@ content:
     third_party_settings: {  }
     type: daterange_default
     region: content
+  field_oclc:
+    weight: 8
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_publication_place_city:
     weight: 2
     label: above
@@ -181,7 +200,7 @@ content:
     type: entity_reference_label
     region: content
   links:
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
