--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.publication.body
     - field.field.node.publication.field_abstract
     - field.field.node.publication.field_credit
     - field.field.node.publication.field_date_description
@@ -12,8 +11,8 @@ dependencies:
     - field.field.node.publication.field_first_issue_date_is_approx
     - field.field.node.publication.field_first_issue_sort_date
     - field.field.node.publication.field_frequency
-    - field.field.node.publication.field_geo_coverage_city
-    - field.field.node.publication.field_geo_coverage_province
+    - field.field.node.publication.field_frequency_notes
+    - field.field.node.publication.field_geographic_coverage
     - field.field.node.publication.field_issn
     - field.field.node.publication.field_last_issue_approx_date
     - field.field.node.publication.field_last_issue_date
@@ -24,6 +23,8 @@ dependencies:
     - field.field.node.publication.field_publication_place_city
     - field.field.node.publication.field_publication_place_province
     - field.field.node.publication.field_publisher
+    - field.field.node.publication.field_sort_title
+    - field.field.node.publication.field_subject_blurb
     - field.field.node.publication.field_succeeding_title
     - node.type.publication
   module:
@@ -43,7 +44,7 @@ third_party_settings:
         - field_last_issue_approx_date
         - field_date_description
       parent_name: ''
-      weight: 5
+      weight: 6
       format_type: details
       format_settings:
         label: 'Date of Publication'
@@ -58,7 +59,7 @@ third_party_settings:
         - field_previous_title
         - field_succeeding_title
       parent_name: ''
-      weight: 1
+      weight: 2
       format_type: details
       format_settings:
         label: 'Alternative titles'
@@ -68,27 +69,12 @@ third_party_settings:
         open: false
       label: 'Alternative titles'
       region: content
-    group_g:
-      children:
-        - field_geo_coverage_province
-        - field_geo_coverage_city
-      parent_name: ''
-      weight: 3
-      format_type: details
-      format_settings:
-        label: 'Geographic Coverage'
-        required_fields: true
-        id: ''
-        classes: ''
-        open: false
-      label: 'Geographic Coverage'
-      region: content
     group_place_of_publication:
       children:
         - field_publication_place_province
         - field_publication_place_city
       parent_name: ''
-      weight: 2
+      weight: 3
       format_type: details
       format_settings:
         label: 'Place of Publication'
@@ -103,23 +89,14 @@ targetEntityType: node
 bundle: publication
 mode: default
 content:
-  body:
-    type: text_textarea_with_summary
-    weight: 7
-    settings:
-      rows: 9
-      summary_rows: 3
-      placeholder: ''
-    third_party_settings: {  }
-    region: content
   created:
     type: datetime_timestamp
-    weight: 13
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
   field_abstract:
-    weight: 11
+    weight: 12
     settings:
       rows: 5
       placeholder: ''
@@ -127,13 +104,12 @@ content:
     type: text_textarea
     region: content
   field_credit:
-    weight: 10
+    weight: 19
     settings:
-      match_operator: CONTAINS
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: string_textarea
     region: content
   field_date_description:
     weight: 42
@@ -186,50 +162,51 @@ content:
     type: boolean_checkbox
     region: content
   field_frequency:
-    weight: 6
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
-  field_geo_coverage_city:
-    weight: 5
+  field_frequency_notes:
+    weight: 8
     settings:
-      match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings:
       conditional_fields:
-        466b1f2b-fa75-4835-a8b8-e3a2ce30631d:
-          dependee: field_geo_coverage_province
+        e5c4d21c-630f-482a-9a5f-b91607d5e6b2:
+          dependee: field_frequency
           settings:
-            state: '!visible'
-            condition: empty
+            state: visible
+            condition: value
             grouping: AND
             values_set: 1
             value: ''
             values: {  }
             value_form:
               -
-                target_id: null
-                _weight: '0'
-            effect: show
-            effect_options: {  }
+                target_id: '4'
+            effect: slide
+            effect_options:
+              fade:
+                speed: '400'
+              slide:
+                speed: '300'
             selector: ''
           entity_type: node
           bundle: publication
-    type: entity_reference_autocomplete
+    type: string_textfield
     region: content
-  field_geo_coverage_province:
+  field_geographic_coverage:
     weight: 4
     settings:
-      match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: string_textfield
     region: content
   field_issn:
-    weight: 8
+    weight: 10
     settings:
       size: 60
       placeholder: ''
@@ -279,7 +256,7 @@ content:
     type: boolean_checkbox
     region: content
   field_oclc:
-    weight: 9
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -333,13 +310,29 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_publisher:
-    weight: 4
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
+  field_sort_title:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_subject_blurb:
+    weight: 9
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_succeeding_title:
     weight: 10
@@ -352,7 +345,7 @@ content:
     region: content
   path:
     type: path
-    weight: 16
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -360,21 +353,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 14
+    weight: 15
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 17
+    weight: 18
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 16
     region: content
     third_party_settings: {  }
   title:
@@ -387,7 +380,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 12
+    weight: 13
     settings:
       match_operator: CONTAINS
       size: 60
