--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.publication.body
     - field.field.node.publication.field_abstract
     - field.field.node.publication.field_credit
     - field.field.node.publication.field_date_description
@@ -12,8 +11,8 @@ dependencies:
     - field.field.node.publication.field_first_issue_date_is_approx
     - field.field.node.publication.field_first_issue_sort_date
     - field.field.node.publication.field_frequency
-    - field.field.node.publication.field_geo_coverage_city
-    - field.field.node.publication.field_geo_coverage_province
+    - field.field.node.publication.field_frequency_notes
+    - field.field.node.publication.field_geographic_coverage
     - field.field.node.publication.field_issn
     - field.field.node.publication.field_last_issue_approx_date
     - field.field.node.publication.field_last_issue_date
@@ -24,6 +23,8 @@ dependencies:
     - field.field.node.publication.field_publication_place_city
     - field.field.node.publication.field_publication_place_province
     - field.field.node.publication.field_publisher
+    - field.field.node.publication.field_sort_title
+    - field.field.node.publication.field_subject_blurb
     - field.field.node.publication.field_succeeding_title
     - node.type.publication
   module:
@@ -55,7 +56,7 @@ third_party_settings:
         - field_last_issue_approx_date
         - field_date_description
       parent_name: ''
-      weight: 4
+      weight: 3
       format_type: details
       format_settings:
         id: ''
@@ -69,13 +70,6 @@ targetEntityType: node
 bundle: publication
 mode: default
 content:
-  body:
-    label: hidden
-    type: text_default
-    weight: 6
-    settings: {  }
-    third_party_settings: {  }
-    region: content
   field_abstract:
     weight: 10
     label: above
@@ -86,10 +80,9 @@ content:
   field_credit:
     weight: 9
     label: above
-    settings:
-      link: true
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_label
+    type: basic_string
     region: content
   field_date_description:
     weight: 10
@@ -118,28 +111,28 @@ content:
     type: daterange_default
     region: content
   field_frequency:
+    weight: 4
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_frequency_notes:
     weight: 5
     label: above
     settings:
-      link: true
+      link_to_entity: false
     third_party_settings: {  }
-    type: entity_reference_label
+    type: string
     region: content
-  field_geo_coverage_city:
-    weight: 2
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_geo_coverage_province:
+  field_geographic_coverage:
     weight: 1
     label: above
     settings:
-      link: true
+      link_to_entity: false
     third_party_settings: {  }
-    type: entity_reference_label
+    type: string
     region: content
   field_issn:
     weight: 7
@@ -192,12 +185,20 @@ content:
     type: entity_reference_label
     region: content
   field_publisher:
-    weight: 3
+    weight: 2
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_subject_blurb:
+    weight: 6
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   links:
     weight: 11
@@ -210,4 +211,5 @@ hidden:
   field_last_issue_date_is_approx: true
   field_last_issue_sort_date: true
   field_previous_title: true
+  field_sort_title: true
   field_succeeding_title: true
