--- a/config-yml/core.entity_view_display.node.publication.teaser.yml
+++ b/config-yml/core.entity_view_display.node.publication.teaser.yml
@@ -4,31 +4,44 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.publication.body
+    - field.field.node.publication.field_abstract
+    - field.field.node.publication.field_credit
+    - field.field.node.publication.field_date_description
+    - field.field.node.publication.field_first_issue_approx_date
+    - field.field.node.publication.field_first_issue_date
+    - field.field.node.publication.field_first_issue_date_is_approx
+    - field.field.node.publication.field_first_issue_sort_date
+    - field.field.node.publication.field_frequency
+    - field.field.node.publication.field_issn
+    - field.field.node.publication.field_last_issue_approx_date
+    - field.field.node.publication.field_last_issue_date
+    - field.field.node.publication.field_last_issue_date_is_approx
+    - field.field.node.publication.field_last_issue_sort_date
+    - field.field.node.publication.field_oclc
+    - field.field.node.publication.field_previous_title
+    - field.field.node.publication.field_publication_place_city
+    - field.field.node.publication.field_publication_place_province
+    - field.field.node.publication.field_publisher
+    - field.field.node.publication.field_sort_title
+    - field.field.node.publication.field_subject_blurb
+    - field.field.node.publication.field_succeeding_title
     - node.type.publication
   module:
-    - text
     - user
 id: node.publication.teaser
 targetEntityType: node
 bundle: publication
 mode: teaser
 content:
-  body:
-    label: hidden
-    type: text_summary_or_trimmed
-    weight: 101
-    settings:
-      trim_length: 600
-    third_party_settings: {  }
-    region: content
   links:
     weight: 100
     region: content
 hidden:
   field_abbreviated_title: true
+  field_abstract: true
   field_city_town: true
   field_credit: true
+  field_date_description: true
   field_first_issue: true
   field_first_issue_approx_date: true
   field_first_issue_date: true
@@ -36,8 +49,6 @@ hidden:
   field_first_issue_precise_date: true
   field_first_issue_sort_date: true
   field_frequency: true
-  field_geo_coverage_city: true
-  field_geo_coverage_province: true
   field_issn: true
   field_last_issue: true
   field_last_issue_approx_date: true
@@ -45,10 +56,13 @@ hidden:
   field_last_issue_date_is_approx: true
   field_last_issue_precise_date: true
   field_last_issue_sort_date: true
+  field_oclc: true
   field_place_of_publication: true
   field_previous_title: true
   field_province_state: true
   field_publication_place_city: true
   field_publication_place_province: true
   field_publisher: true
+  field_sort_title: true
+  field_subject_blurb: true
   field_succeeding_title: true
