--- a/config-yml/core.entity_view_display.node.publication.teaser.yml
+++ b/config-yml/core.entity_view_display.node.publication.teaser.yml
@@ -49,6 +49,8 @@ hidden:
   field_first_issue_precise_date: true
   field_first_issue_sort_date: true
   field_frequency: true
+  field_frequency_notes: true
+  field_geographic_coverage: true
   field_issn: true
   field_last_issue: true
   field_last_issue_approx_date: true
