--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.publication.field_frequency_notes
     - field.field.node.publication.field_geographic_coverage
     - field.field.node.publication.field_issn
+    - field.field.node.publication.field_language
     - field.field.node.publication.field_last_issue_approx_date
     - field.field.node.publication.field_last_issue_date
     - field.field.node.publication.field_last_issue_date_is_approx
@@ -31,6 +32,7 @@ dependencies:
   module:
     - datetime_range
     - field_group
+    - languagefield
     - path
     - text
 third_party_settings:
@@ -92,7 +94,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 14
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -105,7 +107,7 @@ content:
     type: text_textarea
     region: content
   field_credit:
-    weight: 19
+    weight: 13
     settings:
       rows: 5
       placeholder: ''
@@ -234,6 +236,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_language:
+    weight: 14
+    settings:
+      format:
+        name: name
+    third_party_settings: {  }
+    type: languagefield_select
     region: content
   field_last_issue_approx_date:
     weight: 41
@@ -367,7 +377,7 @@ content:
     region: content
   path:
     type: path
-    weight: 17
+    weight: 19
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -375,21 +385,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 17
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 18
+    weight: 20
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 18
     region: content
     third_party_settings: {  }
   title:
@@ -402,7 +412,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 13
+    weight: 15
     settings:
       match_operator: CONTAINS
       size: 60
@@ -413,3 +423,4 @@ hidden:
   field_first_issue_sort_date: true
   field_last_issue_sort_date: true
   field_serial_holdings: true
+  langcode: true
