--- a/config-yml/core.entity_form_display.node.serial_holding.default.yml
+++ b/config-yml/core.entity_form_display.node.serial_holding.default.yml
@@ -90,6 +90,13 @@ content:
           bundle: serial_holding
     type: string_textfield
     region: content
+  langcode:
+    type: language_select
+    weight: 2
+    region: content
+    settings:
+      include_locked: true
+    third_party_settings: {  }
   path:
     type: path
     weight: 30
