--- a/config-yml/core.entity_form_display.taxonomy_term.publisher.default.yml
+++ b/config-yml/core.entity_form_display.taxonomy_term.publisher.default.yml
@@ -11,6 +11,13 @@ targetEntityType: taxonomy_term
 bundle: publisher
 mode: default
 content:
+  langcode:
+    type: language_select
+    weight: 2
+    region: content
+    settings:
+      include_locked: true
+    third_party_settings: {  }
   name:
     type: string_textfield
     weight: 0
