--- a/config-yml/core.entity_view_display.node.publication.teaser.yml
+++ b/config-yml/core.entity_view_display.node.publication.teaser.yml
@@ -12,6 +12,8 @@ dependencies:
     - field.field.node.publication.field_first_issue_date_is_approx
     - field.field.node.publication.field_first_issue_sort_date
     - field.field.node.publication.field_frequency
+    - field.field.node.publication.field_frequency_notes
+    - field.field.node.publication.field_geographic_coverage
     - field.field.node.publication.field_issn
     - field.field.node.publication.field_last_issue_approx_date
     - field.field.node.publication.field_last_issue_date
@@ -22,6 +24,7 @@ dependencies:
     - field.field.node.publication.field_publication_place_city
     - field.field.node.publication.field_publication_place_province
     - field.field.node.publication.field_publisher
+    - field.field.node.publication.field_serial_holdings
     - field.field.node.publication.field_sort_title
     - field.field.node.publication.field_subject_blurb
     - field.field.node.publication.field_succeeding_title
@@ -65,6 +68,8 @@ hidden:
   field_publication_place_city: true
   field_publication_place_province: true
   field_publisher: true
+  field_serial_holdings: true
   field_sort_title: true
   field_subject_blurb: true
   field_succeeding_title: true
+  langcode: true
