--- a/config-yml/core.entity_view_display.node.serial_holding.teaser.yml
+++ b/config-yml/core.entity_view_display.node.serial_holding.teaser.yml
@@ -4,6 +4,10 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.serial_holding.field_serial_holding_call_number
+    - field.field.node.serial_holding.field_serial_holding_notes
+    - field.field.node.serial_holding.field_serial_holding_type
+    - field.field.node.serial_holding.field_serial_holding_uri
     - node.type.serial_holding
   module:
     - user
@@ -15,4 +19,9 @@ content:
   links:
     weight: 100
     region: content
-hidden: {  }
+hidden:
+  field_serial_holding_call_number: true
+  field_serial_holding_notes: true
+  field_serial_holding_type: true
+  field_serial_holding_uri: true
+  langcode: true
