--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -26,7 +26,7 @@ dependencies:
     - field.field.node.publication.field_publisher
     - field.field.node.publication.field_serial_holdings
     - field.field.node.publication.field_sort_title
-    - field.field.node.publication.field_subject_blurb
+    - field.field.node.publication.field_subjects
     - field.field.node.publication.field_succeeding_title
     - field.field.node.publication.field_title_notes
     - node.type.publication
@@ -42,7 +42,7 @@ third_party_settings:
         - field_publication_place_province
         - field_publication_place_city
       parent_name: ''
-      weight: 1
+      weight: 0
       format_type: details
       format_settings:
         id: ''
@@ -60,7 +60,7 @@ third_party_settings:
         - field_last_issue_approx_date
         - field_date_description
       parent_name: ''
-      weight: 4
+      weight: 3
       format_type: details
       format_settings:
         id: ''
@@ -75,14 +75,14 @@ bundle: publication
 mode: default
 content:
   field_abstract:
-    weight: 11
+    weight: 10
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_credit:
-    weight: 10
+    weight: 9
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -115,7 +115,7 @@ content:
     type: daterange_default
     region: content
   field_frequency:
-    weight: 5
+    weight: 4
     label: above
     settings:
       link: true
@@ -123,7 +123,7 @@ content:
     type: entity_reference_label
     region: content
   field_frequency_notes:
-    weight: 6
+    weight: 5
     label: above
     settings:
       link_to_entity: false
@@ -131,7 +131,7 @@ content:
     type: string
     region: content
   field_geographic_coverage:
-    weight: 2
+    weight: 1
     label: above
     settings:
       link_to_entity: false
@@ -139,7 +139,7 @@ content:
     type: string
     region: content
   field_issn:
-    weight: 8
+    weight: 7
     label: above
     settings:
       link_to_entity: false
@@ -165,7 +165,7 @@ content:
     type: daterange_default
     region: content
   field_oclc:
-    weight: 9
+    weight: 8
     label: above
     settings:
       link_to_entity: false
@@ -189,15 +189,15 @@ content:
     type: entity_reference_label
     region: content
   field_publisher:
-    weight: 3
+    weight: 2
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_subject_blurb:
-    weight: 7
+  field_subjects:
+    weight: 6
     label: above
     settings:
       link_to_entity: false
@@ -212,7 +212,7 @@ content:
     type: basic_string
     region: content
   links:
-    weight: 12
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
