--- a/config-yml/core.entity_view_display.node.publication.teaser.yml
+++ b/config-yml/core.entity_view_display.node.publication.teaser.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.node.publication.field_frequency_notes
     - field.field.node.publication.field_geographic_coverage
     - field.field.node.publication.field_issn
+    - field.field.node.publication.field_language
     - field.field.node.publication.field_last_issue_approx_date
     - field.field.node.publication.field_last_issue_date
     - field.field.node.publication.field_last_issue_date_is_approx
@@ -26,8 +27,8 @@ dependencies:
     - field.field.node.publication.field_publisher
     - field.field.node.publication.field_serial_holdings
     - field.field.node.publication.field_sort_title
-    - field.field.node.publication.field_subject_blurb
     - field.field.node.publication.field_succeeding_title
+    - field.field.node.publication.field_title_notes
     - node.type.publication
   module:
     - user
@@ -55,6 +56,7 @@ hidden:
   field_frequency_notes: true
   field_geographic_coverage: true
   field_issn: true
+  field_language: true
   field_last_issue: true
   field_last_issue_approx_date: true
   field_last_issue_date: true
@@ -70,6 +72,6 @@ hidden:
   field_publisher: true
   field_serial_holdings: true
   field_sort_title: true
-  field_subject_blurb: true
   field_succeeding_title: true
+  field_title_notes: true
   langcode: true
