--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -26,6 +26,7 @@ dependencies:
     - field.field.node.publication.field_publisher
     - field.field.node.publication.field_serial_holdings
     - field.field.node.publication.field_sort_title
+    - field.field.node.publication.field_subject_notes
     - field.field.node.publication.field_subjects
     - field.field.node.publication.field_succeeding_title
     - field.field.node.publication.field_title_notes
@@ -75,14 +76,14 @@ bundle: publication
 mode: default
 content:
   field_abstract:
-    weight: 10
+    weight: 11
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_credit:
-    weight: 9
+    weight: 10
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -139,7 +140,7 @@ content:
     type: string
     region: content
   field_issn:
-    weight: 7
+    weight: 8
     label: above
     settings:
       link_to_entity: false
@@ -165,7 +166,7 @@ content:
     type: daterange_default
     region: content
   field_oclc:
-    weight: 8
+    weight: 9
     label: above
     settings:
       link_to_entity: false
@@ -196,6 +197,13 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_subject_notes:
+    weight: 7
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
+    region: content
   field_subjects:
     weight: 6
     label: above
@@ -212,7 +220,7 @@ content:
     type: basic_string
     region: content
   links:
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
