--- a/config-yml/core.entity_view_display.node.publication.teaser.yml
+++ b/config-yml/core.entity_view_display.node.publication.teaser.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.publication.field_abstract
     - field.field.node.publication.field_credit
     - field.field.node.publication.field_date_description
     - field.field.node.publication.field_first_issue_approx_date
@@ -27,6 +26,8 @@ dependencies:
     - field.field.node.publication.field_publisher
     - field.field.node.publication.field_serial_holdings
     - field.field.node.publication.field_sort_title
+    - field.field.node.publication.field_subject_notes
+    - field.field.node.publication.field_subjects
     - field.field.node.publication.field_succeeding_title
     - field.field.node.publication.field_title_notes
     - node.type.publication
@@ -42,7 +43,6 @@ content:
     region: content
 hidden:
   field_abbreviated_title: true
-  field_abstract: true
   field_city_town: true
   field_credit: true
   field_date_description: true
@@ -72,6 +72,8 @@ hidden:
   field_publisher: true
   field_serial_holdings: true
   field_sort_title: true
+  field_subject_notes: true
+  field_subjects: true
   field_succeeding_title: true
   field_title_notes: true
   langcode: true
