--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -24,6 +24,7 @@ dependencies:
     - field.field.node.publication.field_publication_place_city
     - field.field.node.publication.field_publication_place_province
     - field.field.node.publication.field_publisher
+    - field.field.node.publication.field_related_title
     - field.field.node.publication.field_serial_holdings
     - field.field.node.publication.field_sort_title
     - field.field.node.publication.field_subject_notes
@@ -47,7 +48,7 @@ third_party_settings:
         - field_last_issue_approx_date
         - field_date_description
       parent_name: ''
-      weight: 7
+      weight: 6
       format_type: details
       format_settings:
         label: 'Date of Publication'
@@ -62,7 +63,7 @@ third_party_settings:
         - field_publication_place_province
         - field_publication_place_city
       parent_name: ''
-      weight: 4
+      weight: 3
       format_type: details
       format_settings:
         label: 'Place of Publication'
@@ -79,12 +80,12 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 18
+    weight: 20
     region: content
     settings: {  }
     third_party_settings: {  }
   field_continued_by:
-    weight: 45
+    weight: 18
     settings:
       match_operator: CONTAINS
       size: 60
@@ -93,7 +94,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_continues:
-    weight: 44
+    weight: 17
     settings:
       match_operator: CONTAINS
       size: 60
@@ -102,7 +103,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_credit:
-    weight: 14
+    weight: 13
     settings:
       rows: 5
       placeholder: ''
@@ -160,13 +161,13 @@ content:
     type: boolean_checkbox
     region: content
   field_frequency:
-    weight: 8
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_frequency_notes:
-    weight: 9
+    weight: 8
     settings:
       size: 60
       placeholder: ''
@@ -217,7 +218,7 @@ content:
     type: string_textfield
     region: content
   field_geographic_coverage:
-    weight: 5
+    weight: 4
     settings:
       size: 60
       placeholder: ''
@@ -225,7 +226,7 @@ content:
     type: string_textfield
     region: content
   field_issn:
-    weight: 12
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -233,7 +234,7 @@ content:
     type: string_textfield
     region: content
   field_language:
-    weight: 15
+    weight: 14
     settings:
       format:
         name: name
@@ -283,7 +284,7 @@ content:
     type: boolean_checkbox
     region: content
   field_oclc:
-    weight: 13
+    weight: 12
     settings:
       size: 60
       placeholder: ''
@@ -328,7 +329,16 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_publisher:
-    weight: 6
+    weight: 5
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_related_title:
+    weight: 16
     settings:
       match_operator: CONTAINS
       size: 60
@@ -338,7 +348,7 @@ content:
     region: content
   field_serial_holdings:
     type: entity_reference_autocomplete
-    weight: 16
+    weight: 15
     region: content
     settings:
       match_operator: CONTAINS
@@ -376,7 +386,7 @@ content:
     type: string_textfield
     region: content
   field_subject_notes:
-    weight: 11
+    weight: 10
     settings:
       rows: 5
       placeholder: ''
@@ -384,7 +394,7 @@ content:
     type: string_textarea
     region: content
   field_subjects:
-    weight: 10
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -423,7 +433,7 @@ content:
     region: content
   path:
     type: path
-    weight: 21
+    weight: 23
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -431,21 +441,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 19
+    weight: 21
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 22
+    weight: 24
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 20
+    weight: 22
     region: content
     third_party_settings: {  }
   title:
@@ -458,7 +468,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 17
+    weight: 19
     settings:
       match_operator: CONTAINS
       size: 60
