Publication form display adjustments

--- a/config-yml/field.field.node.publication.field_continued_by.yml
+++ b/config-yml/field.field.node.publication.field_continued_by.yml
@@ -10,7 +10,7 @@ field_name: field_continued_by
 entity_type: node
 bundle: publication
 label: 'Continued by'
-description: '<i>Later title</i>'
+description: 'Later title'
 required: false
 translatable: false
 default_value: {  }
