--- a/config-yml/field.field.node.publication.field_continues.yml
+++ b/config-yml/field.field.node.publication.field_continues.yml
@@ -10,7 +10,7 @@ field_name: field_continues
 entity_type: node
 bundle: publication
 label: Continues
-description: '<i>Earlier title</i>'
+description: 'Earlier title'
 required: false
 translatable: false
 default_value: {  }
