--- a/config-yml/field.field.node.publication.field_supplemental_information.yml
+++ b/config-yml/field.field.node.publication.field_supplemental_information.yml
@@ -12,7 +12,7 @@ field_name: field_supplemental_information
 entity_type: node
 bundle: publication
 label: 'Supplemental Information'
-description: ''
+description: 'PDF of title tree image'
 required: false
 translatable: false
 default_value: {  }
