--- a/config-yml/core.entity_view_display.node.publication.teaser.yml
+++ b/config-yml/core.entity_view_display.node.publication.teaser.yml
@@ -4,8 +4,9 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.publication.field_continued_by
+    - field.field.node.publication.field_continues
     - field.field.node.publication.field_credit
-    - field.field.node.publication.field_date_description
     - field.field.node.publication.field_first_issue_approx_date
     - field.field.node.publication.field_first_issue_date
     - field.field.node.publication.field_first_issue_date_is_approx
@@ -23,10 +24,12 @@ dependencies:
     - field.field.node.publication.field_publication_place_city
     - field.field.node.publication.field_publication_place_province
     - field.field.node.publication.field_publisher
+    - field.field.node.publication.field_related_title
     - field.field.node.publication.field_serial_holdings
     - field.field.node.publication.field_sort_title
     - field.field.node.publication.field_subject_notes
     - field.field.node.publication.field_subjects
+    - field.field.node.publication.field_supplemental_information
     - field.field.node.publication.field_title_notes
     - node.type.publication
   module:
@@ -42,8 +45,9 @@ content:
 hidden:
   field_abbreviated_title: true
   field_city_town: true
+  field_continued_by: true
+  field_continues: true
   field_credit: true
-  field_date_description: true
   field_first_issue: true
   field_first_issue_approx_date: true
   field_first_issue_date: true
@@ -67,9 +71,11 @@ hidden:
   field_publication_place_city: true
   field_publication_place_province: true
   field_publisher: true
+  field_related_title: true
   field_serial_holdings: true
   field_sort_title: true
   field_subject_notes: true
   field_subjects: true
+  field_supplemental_information: true
   field_title_notes: true
   langcode: true
