--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -174,7 +174,7 @@ content:
       placeholder: ''
     third_party_settings:
       conditional_fields:
-        e5c4d21c-630f-482a-9a5f-b91607d5e6b2:
+        ab7070e2-4c97-41b8-881c-a49c5dd93e55:
           dependee: field_frequency
           settings:
             state: visible
@@ -185,28 +185,7 @@ content:
             values: {  }
             value_form:
               -
-                target_id: '4'
-            effect: slide
-            effect_options:
-              fade:
-                speed: '400'
-              slide:
-                speed: '300'
-            selector: ''
-          entity_type: node
-          bundle: publication
-        48d4ed94-e9ab-40d4-a2da-2d6be0940668:
-          dependee: field_frequency
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                target_id: '1'
+                value: varies
             effect: slide
             effect_options:
               fade:
