--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -174,24 +174,22 @@ content:
       placeholder: ''
     third_party_settings:
       conditional_fields:
-        ab7070e2-4c97-41b8-881c-a49c5dd93e55:
+        128d53c2-a5a5-4266-befa-c61bdc722051:
           dependee: field_frequency
           settings:
             state: visible
             condition: value
             grouping: AND
-            values_set: 1
+            values_set: 3
             value: ''
-            values: {  }
-            value_form:
-              -
-                value: varies
+            values: "daily\r\nweekly\r\nmonthly\r\nvaries"
+            value_form: {  }
             effect: slide
             effect_options:
               fade:
                 speed: '400'
               slide:
-                speed: '300'
+                speed: '400'
             selector: ''
           entity_type: node
           bundle: publication
@@ -368,7 +366,7 @@ content:
   field_subject_notes:
     weight: 10
     settings:
-      rows: 5
+      rows: 4
       placeholder: ''
     third_party_settings: {  }
     type: string_textarea
