Hide Holdings from publication form (have tab)

--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -81,12 +81,12 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 22
+    weight: 21
     region: content
     settings: {  }
     third_party_settings: {  }
   field_continued_by:
-    weight: 20
+    weight: 18
     settings:
       match_operator: CONTAINS
       size: 60
@@ -95,7 +95,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_continues:
-    weight: 19
+    weight: 17
     settings:
       match_operator: CONTAINS
       size: 60
@@ -112,7 +112,7 @@ content:
     type: string_textarea
     region: content
   field_description:
-    weight: 16
+    weight: 14
     settings:
       rows: 3
       placeholder: ''
@@ -212,7 +212,7 @@ content:
     type: string_textfield
     region: content
   field_language:
-    weight: 14
+    weight: 19
     settings:
       format:
         name: name
@@ -316,23 +316,14 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_related_title:
-    weight: 17
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
-  field_serial_holdings:
-    type: entity_reference_autocomplete
     weight: 15
-    region: content
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   field_sort_title:
     weight: 1
     settings:
@@ -380,7 +371,7 @@ content:
     type: string_textfield
     region: content
   field_supplemental_information:
-    weight: 18
+    weight: 16
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
@@ -418,7 +409,7 @@ content:
     region: content
   path:
     type: path
-    weight: 25
+    weight: 24
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -426,21 +417,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 23
+    weight: 22
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 26
+    weight: 25
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 24
+    weight: 23
     region: content
     third_party_settings: {  }
   title:
@@ -453,7 +444,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 21
+    weight: 20
     settings:
       match_operator: CONTAINS
       size: 60
@@ -463,4 +454,5 @@ content:
 hidden:
   field_first_issue_sort_date: true
   field_last_issue_sort_date: true
+  field_serial_holdings: true
   langcode: true
