--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -77,14 +77,6 @@ bundle: publication
 mode: default
 content:
   field_continued_by:
-    weight: 14
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_continues:
     weight: 13
     label: above
     settings:
@@ -92,8 +84,16 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_continues:
+    weight: 12
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_description:
-    weight: 11
+    weight: 10
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -199,21 +199,13 @@ content:
     type: entity_reference_label
     region: content
   field_related_title:
-    weight: 15
+    weight: 14
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_serial_holdings:
-    type: entity_reference_label
-    weight: 10
-    region: content
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
   field_subject_notes:
     weight: 7
     label: above
@@ -230,7 +222,7 @@ content:
     type: string
     region: content
   field_supplemental_information:
-    weight: 12
+    weight: 11
     label: above
     settings:
       use_description_as_link_text: true
@@ -245,7 +237,7 @@ content:
     type: basic_string
     region: content
   links:
-    weight: 16
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -256,5 +248,6 @@ hidden:
   field_language: true
   field_last_issue_date_is_approx: true
   field_last_issue_sort_date: true
+  field_serial_holdings: true
   field_sort_title: true
   langcode: true
