--- a/config-yml/field.field.node.publication.field_frequency.yml
+++ b/config-yml/field.field.node.publication.field_frequency.yml
@@ -12,7 +12,7 @@ field_name: field_frequency
 entity_type: node
 bundle: publication
 label: Frequency
-description: 'How often the newspaper was published'
+description: 'How often the paper was published'
 required: false
 translatable: false
 default_value: {  }
